// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryCardContext should handle an onColumnSort event: onColumnSort event, dispatch 1`] = `
Array [
  Array [
    Array [
      Object {
        "dir": "desc",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "loremIpsumColumnOne",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "loremIpsumColumnOne",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventoryCardContext should handle an onPage event: onPage event, dispatch 1`] = `
Array [
  Array [
    Array [
      Object {
        "offset": 1,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_offset",
        "viewId": "lorem",
      },
      Object {
        "limit": 5,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_limit",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventoryCardContext should handle instances inventory API responses: inventory, cancelled 1`] = `
Object {
  "data": Object {},
  "error": undefined,
  "fulfilled": undefined,
  "pending": true,
}
`;

exports[`InventoryCardContext should handle instances inventory API responses: inventory, disabled 1`] = `
Object {
  "data": Object {},
  "error": undefined,
  "fulfilled": undefined,
  "pending": false,
}
`;

exports[`InventoryCardContext should handle instances inventory API responses: inventory, error 1`] = `
Object {
  "data": Object {},
  "error": true,
  "fulfilled": undefined,
  "pending": false,
}
`;

exports[`InventoryCardContext should handle instances inventory API responses: inventory, fulfilled 1`] = `
Object {
  "data": Object {},
  "error": undefined,
  "fulfilled": true,
  "pending": false,
}
`;

exports[`InventoryCardContext should handle instances inventory API responses: inventory, pending 1`] = `
Object {
  "data": Object {},
  "error": undefined,
  "fulfilled": undefined,
  "pending": true,
}
`;

exports[`InventoryCardContext should return specific properties: specific properties 1`] = `
Object {
  "useGetInstancesInventory": [Function],
  "useOnColumnSortInstances": [Function],
  "useOnPageInstances": [Function],
}
`;
